--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -4,10 +4,10 @@
 {% endblock %}
 {% block content %}
 <div class="error-container">
-    <h1>{{error_message}}</h1>
+    <h1>An unexpected error has occurred</h1>
     <p>The administrator has been notified. Sorry for the inconvenience!</p>
     <div class="button-container">
-        <p><a href="{{ url_for('home') }}">Back to Home</a></p>
+        <p><a href="{{ url_for('general.home') }}">Back to Home</a></p>
     </div>
 </div>
 {% endblock %}
