--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/static/css/main.css"> 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 
@@ -20,7 +20,7 @@
     <header>
         <div class="header-container">
             <div style="display: flex; align-items: center;">
-                <a href="{{ url_for('home') }}" style="text-decoration: none; display: flex; align-items: center;">
+                <a href="{{ url_for('general.home') }}" style="text-decoration: none; display: flex; align-items: center;">
                     <img src="{{ url_for('static', filename='images/loop.png') }}" alt="Loopify Logo" class="logo">
                     <span style="font-family: 'Courier New', Courier, monospace; font-size: 24px; font-weight: bold; color:rgb(50, 125, 55); margin-left: 10px;">Loopify</span>
                 </a>
@@ -36,18 +36,18 @@
                     </div>
 
                     <ul class="dropdown-content" id="dropdownMenu" style="display: none; position: absolute; top: 50px; right: 0; background-color: white; border: 1px solid #ddd; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); z-index: 1000; width: 200px;">
-                        <a href="{{ url_for('cart') }}">
+                        <a href="{{ url_for('cart.cart') }}">
                             <li style="border-bottom: 1px solid #ddd; padding: 10px;">
                                 View Cart
                             </li>
                         </a>
 
-                        <a href="{{ url_for('add_product') }}">
+                        <a href="{{ url_for('product.add_product') }}">
                             <li style="border-bottom: 1px solid #ddd; padding: 10px;">
                                 Sell a New Product
                             </li>
                         </a>
-                        <a href="{{ url_for('logout') }}">
+                        <a href="{{ url_for('auth.logout') }}">
                             <li style="padding: 10px;">
                                 Logout
                             </li>
@@ -62,7 +62,7 @@
                     }
                 </script>
                 {% else %}
-                    <a href="{{ url_for('login') }}" class="login-button">Login</a>
+                    <a href="{{ url_for('auth.login') }}" class="login-button">Login</a>
                 {% endif %}
             </div>
         </div>
@@ -74,7 +74,7 @@
     </main>
 
     {% if userinfo and userinfo.user_id %}
-        <a href="{{ url_for('cart') }}">
+        <a href="{{ url_for('cart.cart') }}">
             <div class="floating-cart">
                 <i class="fa fa-shopping-cart"></i>
                 <span class="cart-badge">{{ userinfo.total_cart_items or 0 }}</span>
@@ -85,7 +85,7 @@
     <footer>
         <div class="footer-container">
             <p>&copy; 2025 Loopify. All rights reserved.</p>
-            <p>Privacy Policy | Terms of Service | <a href="/contact">Contact Me</a></p>
+            <p>Privacy Policy | Terms of Service | <a href="{{ url_for('general.contact') }}">Contact Me</a></p>
         </div>
     </footer>
 
