--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loopify - Login</title>
-    <link rel="stylesheet" href="static/css/registration.css">
+    <link rel="stylesheet" href="/static/css/registration.css">
 </head>
 <body>
     <div class="registration-container">
         <div class="logo-container">
-            <img src="static/images/loop.png" alt="Loopify Logo">
+            <img src="/static/images/loop.png" alt="Loopify Logo">
             <h1>Login to Loopify</h1>
             <p class="tagline">
                 Giving Products a Second Life, Sustainably.!
-                <img src="static/images/leaves.png" alt="Leaves Icon" class="tagline-icon">
+                <img src="/static/images/leaves.png" alt="Leaves Icon" class="tagline-icon">
             </p>
         </div>
 
@@ -27,14 +27,14 @@
             {% endif %}
         {% endwith %}
         
-        <form action="/login" method="post">
+        <form action="/auth/login" method="post">
             <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
         <p>
-            Don't have an account? <a href="/register">Register here</a>
+            Don't have an account? <a href="{{ url_for('auth.register') }}">Register here</a>
         </p>
     </div>
 </body>
