--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -8,7 +8,7 @@
             <div class="card shadow-sm">
                 <div class="card-body">
                     <h5 class="card-title">Search</h5>
-                    <form method="get" action="{{ url_for('search_results') }}">
+                    <form method="get" action="{{ url_for('product.search_results') }}">
                         <input type="text" name="q" class="form-control" placeholder="Search for products..." 
                                value="{{ search_text }}" style="margin-bottom: 15px;">
                         
@@ -26,7 +26,7 @@
                     </form>
 
                     <!-- Clear All Button -->
-                    <form method="get" action="{{ url_for('search_results') }}">
+                    <form method="get" action="{{ url_for('product.search_results') }}">
                         <button type="submit" class="btn btn-danger btn-block" style="margin-top: 10px;">Clear All</button>
                     </form>
                 </div>
