--- a/app/templates/view_product.html
+++ b/app/templates/view_product.html
@@ -10,7 +10,7 @@
                 <img src="{{ product.image_url }}" alt="{{ product.title }}" class="img-fluid rounded shadow-sm" style="width: 100%; height: auto; object-fit: cover; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
             </td>
             <td class="align-top" style="width: 50%; padding-left: 50px; padding-top: 20px;">
-                <p class="badge badge-info" style="margin:0; font-size: 1rem; padding: 0.5rem 1rem; background-color: #17a2b8; color: white; border-radius: 5px; font-weight: bold; display: inline-block; width: auto;">{{ product.category }}</p>
+                <p class="badge badge-info" style="margin:0; font-size: 1rem; padding: 0.5rem 1rem; background-color: #17a2b8; color: white; border-radius: 5px; font-weight: bold; display: inline-block; width: auto;">{{ product.category.name }}</p>
                 <hr style="border: none; height: 2px; background: linear-gradient(to right, #ddd, rgba(221, 221, 221, 0)); box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin: 10px 0;">
                 
                 <h5 class="font-weight-bold" style="font-family: 'Playfair Display', sans-serif; font-size: 2.5rem; color: #003300; text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3); letter-spacing: 0.5px; text-transform: capitalize; margin-bottom: 20px; word-wrap: break-word; line-height: 1.4;">{{ product.title }}</h5>
@@ -21,7 +21,7 @@
                     <p class="h4 text-success mb-0" style="font-weight: bold; margin-right: 15px; font-size: 1.5rem;">Price: €{{ product.price }}</p>
                     
                         {% if added_to_cart %}
-                        <form method="get" action="{{ url_for('remove_from_cart', product_id=product.id) }}" class="ml-3">
+                        <form method="get" action="{{ url_for('cart.remove_from_cart', product_id=product.id) }}" class="ml-3">
                             <button type="submit" class="btn btn-danger" style="padding: 0.6rem 1.8rem; font-size: 1.1rem; font-weight: bold; border-radius: 5px; border: none; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); color: white; transition: all 0.3s ease-in-out; cursor: pointer;"
                                 onmouseover=" this.style.boxShadow='0 6px 12px rgba(0, 0, 0, 0.3)';"
                                 onmouseout="this.style.boxShadow='0 4px 8px rgba(0, 0, 0, 0.2)';">
@@ -29,7 +29,7 @@
                             </button>
                         </form>
                         {% else %}
-                        <form method="get" action="{{ url_for('add_to_cart', product_id=product.id) }}" class="ml-3">
+                        <form method="get" action="{{ url_for('cart.add_to_cart', product_id=product.id) }}" class="ml-3">
                             <button type="submit" class="btn btn-success" style="padding: 0.6rem 1.8rem; font-size: 1.1rem; font-weight: bold; border-radius: 5px; background-color: #28a745; border: none; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); color: white; transition: all 0.3s ease-in-out; cursor: pointer;"
                                 onmouseover=" this.style.boxShadow='0 6px 12px rgba(0, 0, 0, 0.3)';"
                                 onmouseout="this.style.boxShadow='0 4px 8px rgba(0, 0, 0, 0.2)';">
