--- a/app/templates/view_product.html
+++ b/app/templates/view_product.html
@@ -24,7 +24,7 @@
                             <button type="submit" class="btn btn-primary" style="padding: 0.6rem 1.8rem; font-size: 1.1rem; font-weight: bold; border-radius: 5px; border: none; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); color: white; transition: all 0.3s ease-in-out; cursor: pointer;"
                                 onmouseover=" this.style.boxShadow='0 6px 12px rgba(0, 0, 0, 0.3)';"
                                 onmouseout="this.style.boxShadow='0 4px 8px rgba(0, 0, 0, 0.2)';">
-                                Update
+                                Edit
                             </button>
                         </form>
                         <form method="get" action="{{ url_for('product.delete_product', product_id=product.id) }}" class="ml-3">
