--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -7,7 +7,7 @@
 <div class="container cart-container">
     <h2 class="page-title">Your Shopping Cart</h2>
 
-    {% if userinfo.user_id %}
+    {% if user.is_authenticated %}
         {% if cart_items %}
             <table class="table table-striped generic-table">
                 <thead>
