--- a/app/templates/view_product.html
+++ b/app/templates/view_product.html
@@ -27,7 +27,7 @@
                                     Edit
                                 </button>
                             </form>
-                            <form method="get" action="{{ url_for('product.delete_product', product_id=product.id) }}" class="ml-3">
+                            <form method="get" action="{{ url_for('product.delete_product', product_id=product.id) }}" class="ml-3" onsubmit="return confirm('Are you sure you want to delete this product?');">
                                 <button type="submit" class="btn btn-danger" style="padding: 0.6rem 1.8rem; font-size: 1.1rem; font-weight: bold; border-radius: 5px; border: none; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); color: white; transition: all 0.3s ease-in-out; cursor: pointer;"
                                     onmouseover=" this.style.boxShadow='0 6px 12px rgba(0, 0, 0, 0.3)';"
                                     onmouseout="this.style.boxShadow='0 4px 8px rgba(0, 0, 0, 0.2)';">
