--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="/static/css/main.css"> 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/js/dropdown.js"></script>
     {% block styles %}{% endblock %}
+    {% block scripts %}{% endblock %}
 
 </head>
 <body onload="document.body.style.opacity='1'">
@@ -58,21 +60,6 @@
                         </a>
                     </ul>
                 </div>
-                
-                <!-- Script -->
-                <script>
-                    function toggleDropdown() {
-                        const dropdown = document.getElementById('dropdownMenu');
-                        dropdown.style.display = dropdown.style.display === 'block' ? 'none' : 'block';
-                    }
-                
-                    window.addEventListener('click', function(event) {
-                        const dropdown = document.getElementById('dropdownMenu');
-                        if (!event.target.closest('.dropdown')) {
-                            dropdown.style.display = 'none';
-                        }
-                    });
-                </script>
                 {% else %}
                     <a href="{{ url_for('auth.login') }}" class="login-button">Login</a>
                 {% endif %}
